--- a/css/_content.scss
+++ b/css/_content.scss
@@ -36,6 +36,14 @@
   align-items: flex-start;
 }
 
+.flex-center {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .text {
   text-align: justify;
   padding: 15px;
@@ -80,7 +88,7 @@
 
 .section {
   position: relative;
-  max-width: 960px;
+  max-width: 1040px;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
@@ -102,6 +110,7 @@
 }
 
 .subsection {
+  text-align: left;
   font-family: opensans-bold;
   font-size: 16px;
   margin-bottom: 10px;
