added news support

--- a/css/main.scss
+++ b/css/main.scss
@@ -72,3 +72,4 @@ $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23)
 @import "fair";
 @import "exhibitors";
 @import "aboutus";
+@import "news";
