--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
 	font-family: 'opensans';
-	src: url('/css/fonts/Open_Sans/OpenSans-Light.ttf');
+	src: url('#{$awss3}/fonts/Open_Sans/OpenSans-Light.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'opensans-bold';
-	src: url('/css/fonts/Open_Sans/OpenSans-SemiBold.ttf');
+	src: url('#{$awss3}/fonts/Open_Sans/OpenSans-SemiBold.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'montserrat';
-	src: url('/css/fonts/Montserrat/Montserrat-Regular.ttf');
+	src: url('#{$awss3}/fonts/Montserrat/Montserrat-Regular.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
