--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'opensans';
-  src: url("/css/fonts/Open_Sans/OpenSans-Light.ttf");
+  src: url("https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/fonts/Open_Sans/OpenSans-Light.ttf");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'opensans-bold';
-  src: url("/css/fonts/Open_Sans/OpenSans-SemiBold.ttf");
+  src: url("https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/fonts/Open_Sans/OpenSans-SemiBold.ttf");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'montserrat';
-  src: url("/css/fonts/Montserrat/Montserrat-Regular.ttf");
+  src: url("https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/fonts/Montserrat/Montserrat-Regular.ttf");
   font-weight: normal;
   font-style: normal; }
 * {
