--- a/css/_exhibitors.scss
+++ b/css/_exhibitors.scss
@@ -71,6 +71,88 @@
 
 
 
+  #packages-table {
+    // margin-left: auto;
+    // margin-right: auto;
+    padding: 0px;
+    border-spacing: 5px 0px;
+    max-width: 100%;
+
+    tr:nth-child(1) td {
+      font-size: 20px;
+      font-family: montserrat;
+    }
+
+    tr td {
+      padding-top: 5px;
+      padding-bottom: 5px;
+      padding-left: 1px;
+      padding-right: 1px;
+      font-size: 12px;
+      text-align: center;
+      vertical-align: middle;
+      min-width: 25px;
+      width: 15%;
+    }
+
+    tr td:nth-child(1) {
+      background-color: transparent;
+      text-align: right;
+      width: 40%
+    }
+
+    tr td:nth-child(2) {
+      background-color: $ct-gray;
+      color: white;
+    }
+
+    tr td:nth-child(3) {
+      background-color: $pg-silver;
+    }
+
+    tr td:nth-child(4) {
+      background-color: $pg-gold;
+    }
+
+    tr td:nth-child(5) {
+      background-color: $pg-platinum;
+    }
+  }
+
+
+
+  @media only screen and (min-width: $bp-large) {
+
+    #packages-table {
+      padding: 0px;
+      border-spacing: 30px 0px;
+      max-width: 100%;
+
+      tr:nth-child(1) td {
+        font-size: 35px;
+        font-family: opensans-bold;
+      }
+
+      tr td {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 18px;
+      }
+
+      tr td:nth-child(1) {
+        // max-width: 300px;
+      }
+
+  }
+}
+
+
+
+
+
+
   .packages-base, .packages-silver, .packages-gold, .packages-platinum {
     width: 150px;
     height: 200px;
