--- a/css/all.scss
+++ b/css/all.scss
@@ -43,6 +43,8 @@ $sidenav_logo-transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.5s
 $slideshow_link-transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 $infobox-transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 $sidenav_link-transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+$companies_tr-transition-1: opacity .5s cubic-bezier(0.95, 0.05, 0.795, 0.035), transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+$companies_tr-transition-2: opacity .5s cubic-bezier(0.19, 1, 0.22, 1), transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
 
 $ct-gray: #2b2b2b;
 $ct-orange: rgba(229,107,46,1);
@@ -73,3 +75,4 @@ $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23)
 @import "exhibitors";
 @import "aboutus";
 @import "news";
+@import "companies";
