--- a/css/_content.scss
+++ b/css/_content.scss
@@ -59,6 +59,7 @@
   overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
+  background-color: $bg-gray;
 
   .title-text {
     position: relative;
