--- a/css/all.scss
+++ b/css/all.scss
@@ -43,11 +43,12 @@ $sidenav_logo-transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.5s
 $slideshow_link-transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 $infobox-transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 $sidenav_link-transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-$companies_tr-transition-1: opacity .5s cubic-bezier(0.95, 0.05, 0.795, 0.035), transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
-$companies_tr-transition-2: opacity .5s cubic-bezier(0.19, 1, 0.22, 1), transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
-$companies_detail_spin_transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-$companies_detail_overview_transition-1: max-height .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-$companies_detail_overview_transition-2: max-height .5s cubic-bezier(0.215, 0.61, 0.355, 1);
+$arrow-transition-1: opacity .5s cubic-bezier(0.95, 0.05, 0.795, 0.035), transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+$arrow-transition-2: opacity .5s cubic-bezier(0.19, 1, 0.22, 1), transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+$spoiler_spin_transition: transform .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+$spoiler_text_transition: opacity .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+$spoiler_transition-1: max-height .5s cubic-bezier(1, 0, 1, 0);
+$spoiler_transition-2: max-height .5s cubic-bezier(0, 1, 0, 1);
 
 $ct-gray: #2b2b2b;
 $ct-orange: rgba(229,107,46,1);
