--- a/css/all.scss
+++ b/css/all.scss
@@ -80,3 +80,4 @@ $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23)
 @import "aboutus";
 @import "news";
 @import "companies";
+@import "archive";
