--- a/css/_general.scss
+++ b/css/_general.scss
@@ -9,6 +9,12 @@ body {
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  background-color: $bg-gray;
+  display: none;
+}
+
+.fontawesome-i2svg-active body {
+  display: initial;
   background-color: $ct-gray;
 }
 
